# TinyXmlHelper

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
examples/: complex_example1.cpp  complex_example2.cpp  simple_example1.cpp
examples/resources/: complex_example2_input.xml
include/: XMLSerializable.h  XmlElementWrapper.h
src/: XMLSerializable.cpp  XmlElementWrapper.cpp
